--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
